Bug 406837 -  clicking on text input box or address bar doesn't raise virtual keyboard on n800 r=roc sr=roc